--- a/dmulter.html
+++ b/dmulter.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>Upload Image</h1>
-    <form action="ProfileImage" method="POST" enctype="multipart/form-data">
-      <input type="file" value="photo" />
-      <input type="submit" value="Submit" />
-    </form>
+    <form method="POST" action="/upload" enctype="multipart/form-data">
+      <input type="file" name="image">
+      <button type="submit">Upload</button>
+    </form>    
   </body>
 </html>
